# tensorflow-notebooks

./: .gitignore  main.py  pyproject.toml
notebooks/: .gitignore  Untitled.ipynb  sample_preprocessing_layers_of_structured_data_from_scratch.ipynb  tf_guide_tensorflow_basics_001_overview.ipynb  tf_guide_tensorflow_basics_002_tensors.ipynb  tf_tutorial_quick_start_by_mnist.ipynb  tf_tutorial_quick_start_by_mnist_use_custom_model.ipynb
