[tool.poetry]
name = "tensorflow-notebooks"
version = "0.1.0"
description = ""
authors = ["nokomoro3 <snkmr0221@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
tensorflow = "^2.8.0"
jupyterlab = "^3.3.1"
pandas = "^1.4.1"
graphviz = "^0.19.1"
pydot = "^1.4.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
